fix navbar formatting, spelling, content alignment

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -76,3 +76,21 @@ p{
 h5,h4,h3{
   font-weight: bold;
 }
+
+.navbar-brand{
+  font-weight: bold;
+}
+
+.navbar-right,
+.pull-right{
+  margin-right: 15px;
+}
+
+.content{
+  margin-left: 15px;
+}
+
+.row{
+  margin-left: 15px;
+  margin-right: 15px;
+}
